Changed the contract of head to take separator.
* Added tests for different separator.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -107,10 +107,12 @@
     },
     {
       "files": [
-        "head.js"
+        "head.js",
+        "test*"
       ],
       "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "max-len": "off"
       }
     }
   ]
